# course_machine_learning_from_scratch_udemy

./: .gitignore  CLAUDE.md  pyproject.toml
casos_practicos_machine_learning/: 1_Introducción a NumPy.ipynb  2_Introducción a Pandas.ipynb  3_Introducción a Matplotlib.ipynb  4_Regresión Lineal - Predicción del coste de un incidente de seguridad.ipynb  5_Regresión Logística - Detección de SPAM.ipynb  6_Visualización del conjunto de datos.ipynb
sandbox/: 4.1_section.ipynb  5.1_section.ipynb  5.2_section.ipynb  5.3_section.ipynb  6.1_section.ipynb
